<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/navigationHome"
        android:name="com.paawk4.harrypotterapp.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigationGuide"
        android:name="com.paawk4.harrypotterapp.presentation.guide.GuideFragment"
        android:label="@string/title_guide"
        tools:layout="@layout/fragment_guide">
        <action
            android:id="@+id/action_navigation_guide_to_movieFragment"
            app:destination="@id/moviesFragment" />
        <action
            android:id="@+id/action_navigation_guide_to_bookFragment"
            app:destination="@id/booksFragment" />
        <action
            android:id="@+id/action_navigation_guide_to_charactersFragment"
            app:destination="@id/charactersFragment" />
    </fragment>
    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.paawk4.harrypotterapp.presentation.movies.list_movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" >
        <action
            android:id="@+id/action_moviesFragment_to_movieItemFragment"
            app:destination="@id/movieItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/booksFragment"
        android:name="com.paawk4.harrypotterapp.presentation.books.list_books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" >
        <action
            android:id="@+id/action_booksFragment_to_bookItemFragment"
            app:destination="@id/bookItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/charactersFragment"
        android:name="com.paawk4.harrypotterapp.presentation.characters.CharactersFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_characters" />
    <fragment
        android:id="@+id/startFragment"
        android:name="com.paawk4.harrypotterapp.presentation.start.StartFragment"
        android:label="fragment_start"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_navigation_home"
            app:destination="@id/navigationHome"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/movieItemFragment"
        android:name="com.paawk4.harrypotterapp.presentation.movies.movie_item.MovieItemFragment"
        tools:layout="@layout/fragment_movie_item">
        <argument
            android:name="movieId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/bookItemFragment"
        android:name="com.paawk4.harrypotterapp.presentation.books.book_item.BookItemFragment"
        android:label="fragment_book_item"
        tools:layout="@layout/fragment_book_item" >
        <argument
            android:name="bookId"
            app:argType="string" />
    </fragment>

</navigation>