<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.start.StartFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/start_bg_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/BigTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_welcome_text"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/start_magic_wand"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/tv_welcome"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/tv_welcome"
        app:layout_constraintTop_toTopOf="@id/tv_welcome" />

    <TextView
        android:id="@+id/tv_onboarding"
        style="@style/OnboardingTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_black"
        android:padding="15dp"
        android:text="@string/onboarding_text"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintWidth="320dp" />

    <TextView
        android:id="@+id/tv_start_exploring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_black"
        android:padding="15dp"
        android:text="@string/start_exploring_text"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/iv_arrow"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintWidth="200dp" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/tv_start_exploring" />

    <Button
        android:id="@+id/btn_start"
        style="@style/SmallTitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_black"
        android:text="@string/btn_start_text"
        android:paddingVertical="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start" />

</androidx.constraintlayout.widget.ConstraintLayout>